# ProjectChimera

./: .coderabbit.yaml  Dockerfile  EMAIL_RECONCILE.md  Makefile  README.md  README_RECONCILE.md  TASK3_DOCUMENTATION.md  pyproject.toml  requirements.txt
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: diag.md  tooling_strategy.md
scripts/: make_plot.py  reconcile.py  setup_env.sh  spec_check.sh  trend_fetcher.py
skills/: README.md  __init__.py  skill_download_youtube.md  skill_download_youtube.py  skill_generate_short_video.md  skill_generate_short_video.py  skill_transcribe_audio.md  skill_transcribe_audio.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: conftest.py  test_skills_interface.py  test_trend_fetcher.py
